# vms-analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: contribution.md  index.md  quickstart.md
examples/: example.ipynb
old_scripts/: VMS_analysis.py  example-usage.py  extractor_poligonos.py  fishing-analysis.py  improved-hex-map.py  vms-optimizer.py  vms-processor.py  vms-unifier.py
src/: __init__.py  analyzer-file.py
src/vms_analyzer/: _version.py  analyzer.py  utils.py
test/: test-analyzer.py  test-utils.py
