[metadata]
name = vms-analyzer
description = A comprehensive library for analyzing VMS (Vessel Monitoring System) data
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: GIS

[options]
packages = find:
package_dir =
    =src
install_requires =
    pandas>=1.3.0
    geopandas>=0.9.0
    numpy>=1.20.0
    shapely>=1.7.0
    tqdm>=4.60.0
    matplotlib>=3.4.0
    contextily>=1.1.0
    h3>=3.7.0
    loguru>=0.5.0
python_requires = >=3.8
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    pytest-mock>=3.0
    tox>=3.24

docs =
    mkdocs>=1.2.0
    mkdocs-material>=7.0.0
    mkdocstrings>=0.15.0

[options.package_data]
vms_analyzer = py.typed

[flake8]
max-line-length = 100